[project]
name = "imatchui"
description = "Image Matching Webui: A tool for matching images using sota algorithms with a Gradio UI"
version = "1.0"
authors = [
    {name = "vincentqyw"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/Vincentqyw/image-matching-webui"}
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["black", "flake8", "isort"]

[tool.setuptools.packages.find]
# include = ["hloc*", "ui", "api", "datasets*", "third_party*"]
include = ["imatchui*"]

[tool.setuptools.package-data]
imatchui = ["**/*.yaml", "**/*.jpg", "**/*.png", "**/*.cfg", "**/*.webp"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"